# groceria

./: .dockerignore  .env_example  .eslintrc  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: codeql-analysis.yml
app/: .eslintrc  .gitignore  codegen.yml  index.html  package.json  vite.config.ts
app/public/: index.html  manifest.json
app/src/: App.tsx  main.tsx
app/src/components/: GroceryList.tsx  GroceryListItem.tsx  GroceryListItemCreator.tsx  Header.tsx  Hero.tsx  SnackbarHandler.tsx
app/src/graphql/: client.ts  queries.ts
app/src/graphql/query/: getGroceryLists.query.ts
app/src/services/: grocecyListService.ts
app/src/state/: atoms.ts
data/: db.json  sample.json
db/init/: 00-database.sql  01-data.sql
server/: .dockerignore  .gitignore  Dockerfile  db.json  index.ts  package.json  pylama.ini  pyproject.toml  server.py
server/src/groceria_server/: config.py  file_io.py  main.py
src/: App.tsx  index.tsx  types.ts
src/components/: GroceryList.tsx  GroceryListItem.tsx  GroceryListItemCreator.tsx  SnackbarHandler.tsx
src/services/: grocecyListService.ts
src/state/: atoms.ts
