[tool.poetry]
name = "groceria-server"
version = "0.1.0"
description = ""
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
