[tool.poetry]
name = "groceria-server"
version = "0.1.0"
description = ""
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
